Some filters for index pages, swagger update
