# app/Models/Order.php
@@ -9,6 +9,101 @@ use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\SoftDeletes;
 
+/**
+ * @OA\Schema(
+ *       schema="OrdersListPaginated",
+ *       @OA\Property(
+ *           property="data",
+ *           type="array",
+ *           @OA\Items(ref="#/components/schemas/Order")
+ *       ),
+ *       @OA\Property(
+ *          property="links",
+ *          type="object",
+ *          @OA\Property(
+ *              property="first",
+ *              type="string",
+ *              example="http://host/api/orders?page=1"
+ *          ),
+ *          @OA\Property(
+ *              property="last",
+ *              type="string",
+ *              example="http://host/api/orders?page=2"
+ *          ),
+ *          @OA\Property(
+ *              property="prev",
+ *              type="string",
+ *              example="null | http://host/api/orders?page=1"
+ *          ),
+ *          @OA\Property(
+ *              property="next",
+ *              type="string",
+ *              example="null | http://host/api/orders?page=2"
+ *          ),
+ *       ),
+ *       @OA\Property(
+ *            property="meta",
+ *            type="object",
+ *                @OA\Property(
+ *                      property="current_page",
+ *                      type="integer",
+ *                      example="1"
+ *                  ),
+ *                @OA\Property(
+ *                      property="from",
+ *                      type="integer",
+ *                      example="1"
+ *                  ),
+ *                @OA\Property(
+ *                      property="last_page",
+ *                      type="integer",
+ *                      example="3"
+ *                  ),
+ *                @OA\Property(
+ *                      property="links",
+ *                      type="array",
+ *                      @OA\Items(
+ *                          type="object",
+ *                          @OA\Property(
+ *                              property="url",
+ *                              type="string",
+ *                              example="null | http://host/api/orders?page=2"
+ *                          ),
+ *                          @OA\Property(
+ *                              property="label",
+ *                              type="string",
+ *                              example="Next &raquo | 1 |&laquo; Previous"
+ *                          ),
+ *                          @OA\Property(
+ *                              property="active",
+ *                              type="boolean",
+ *                              example="false | true"
+ *                          ),
+ *                      ),
+ *                  ),
+ *              @OA\Property(
+ *                  property="path",
+ *                  type="string",
+ *                  example="http://host/api/orders"
+ *              ),
+ *              @OA\Property(
+ *                  property="per_page",
+ *                  type="integer",
+ *                  example="15"
+ *              ),
+ *              @OA\Property(
+ *                  property="to",
+ *                  type="integer",
+ *                  example="3"
+ *              ),
+ *              @OA\Property(
+ *                  property="total",
+ *                  type="integer",
+ *                  example="3"
+ *              ),
+ *       ),
+ *  )
+ */
 class Order extends Model
 {
     use HasFactory;
